# Megano

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
diploma-frontend/: requirements.txt
megano/: all_data.json  fixtures.json
megano/basket/: basket.py  urls.py  views.py
megano/catalog/: serializers.py  tests.py  urls.py  views.py
megano/megano/: settings.py  urls.py
megano/myauth/: serializers.py  tests.py  urls.py  views.py
megano/order/: models.py  serializers.py  tests.py  urls.py  views.py
megano/order/migrations/: 0001_initial.py  0002_remove_order_products_alter_order_address_and_more.py  0003_remove_order_email_remove_order_full_name_and_more.py  0004_rename_created_at_order_createdat_and_more.py
megano/payment/: models.py  serializers.py  tests.py  urls.py  views.py
megano/payment/migrations/: 0001_initial.py  0002_payment_payment_user_profile.py  0003_payment_payment_num_orders.py  0004_alter_payment_number.py
megano/product/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
megano/product/migrations/: 0001_initial.py  0002_reviews.py  0003_specifications.py  0004_category_product_category.py  0005_product_fulldescription.py  0006_reviews_product.py  0007_remove_reviews_product_product_reviews.py  0008_remove_product_reviews.py  0009_remove_specifications_product_and_more.py  0016_tag.py  (+15 more)
megano/profiles/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
megano/sale/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
nginx/: default.conf
(+23 files in other folders)
